<resources>
    <string name="app_name">LMJ Hotel APP</string>
    <string name="home">Home</string>
    <string name="servicos">Serviços</string>
    <string name="sobre">Sobre</string>
    <string name="txtRodape">LMJ Hotel desde 2002</string>
    <string name="txtTelaInicial">Clique em um dos botões abaixo</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="txtAreaExternaHotel">Área Externa do Hotel</string>
    <string name="txtSuiteHotel">Suíte do Hotel</string>
    <string name="txtservicos">Serviços</string>
    <string name="txtFloraSpa">Flora Spa</string>
    <string name="txtClubKids">Club Kids</string>
    <string name="txtFitnessCenter">Fitness Center</string>
    <string name="txtSuite">Suítes</string>
    <string name="txtTelaSobreHotel">
        Bem vindo ao LMJ Hotel. O Hotel possui 100 apartamentos espaçosos,
        todos com lindas vistas para a cidade. Ele ainda oferece nove salas funcionais
        - sendo um salão de festas com capacidade para até 400 convidados
        - um Spa e um fitness center, além de piscinas interna e externa e um Club Kids.
    </string>
    <string name="txtTelaSobreCulinariaHotel">
        Desfrute de uma pausa no LMJ Hotel e descubra a excelência culinária dos chefs
        Érick Jacquin e Henrique Fogaça além da experiência de bem-estar renovadora no Flora Spa.
        Venha relaxar e desfrutar de tudo que este Oásis Urbano tem a oferecer.
    </string>
</resources>